--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <option>Carnivor</option>
             </select>
             <div id="btn">Compare Me!</div>
+            <div id="btn">Delete Form</div>
         </div>
     </form>
     <!-- .grid to attach tiles to -->
