Fix function to test selection for front/backend communication

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <p>Weight:</p>
             <label><input id="weight" class="form-field__full" type="number" name="weight" />lbs</label>
             <p>Diet:</p>
-            <select id="diet" class="form-field__full" name="diet">
+            <select id="diet" class="form-field__full" name="diet" onselect="testSelection()">
                 <option>Herbavore</option>
                 <option>Omnivore</option>
                 <option>Carnivore</option>
             </select>
-            <button id="btn" onclick="testButtonClick('You clicked me!')">
+            <button id="btn">
                 Compare Me!
             </button>
         </div>
