Reset type from button to div for Compare Me

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <option>Omnivore</option>
                 <option>Carnivore</option>
             </select>
-            <button id="btn">
+            <div id="btn">
                 Compare Me!
-            </button>
+            </div>
         </div>
     </form>
     <!-- .grid to attach tiles to -->
