Attempt event listener for selection

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <label><input id="weight" class="form-field__full" type="number" name="weight" />lbs</label>
             <p>Diet:</p>
             <select id="diet" class="form-field__full" name="diet" onselect="testSelection()">
-                <option>Herbavore</option>
-                <option>Omnivore</option>
-                <option>Carnivore</option>
+                <option value="1">Herbavore</option>
+                <option value="2">Omnivore</option>
+                <option value="3">Carnivore</option>
             </select>
             <div id="btn">
                 Compare Me!
