Remove onselect prop from dropdown

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Weight:</p>
             <label><input id="weight" class="form-field__full" type="number" name="weight" />lbs</label>
             <p>Diet:</p>
-            <select id="diet" class="form-field__full" name="diet" onselect="testSelection()">
+            <select id="diet" class="form-field__full" name="diet">
                 <option value="1">Herbavore</option>
                 <option value="2">Omnivore</option>
                 <option value="3">Carnivore</option>
