Add div for printing selection

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <option value="2">Omnivore</option>
                 <option value="3">Carnivore</option>
             </select>
+            <div class="testSelect">
+            </div>
             <div id="btn">
                 Compare Me!
             </div>
